--- a/index.html
+++ b/index.html
@@ -17,18 +17,16 @@
   </head>
   <body>
       <i class="fa-solid fa-carrot"></i>
-      <h1>A Monalisa agora sou eu</h1>
-      <p> Monalisa, ele me faz querer sempre sorrir e me admira mesmo que de longe.</p>
-      <p>Sue olhar me encanta e me faz querer correr em sua direção como se eu pudesse tocalo com todo o meu coração. </p>
-
-        <div id="primeira">
-        </div>
-        <div id="segunda">
-        </div>
-        <div id="terceira">
-        </div>
-        <div id="quarta">
-        </div>
+    <div class="container">
+      <nav>
+        <div class= "nav-container">
+        <img id= "logo" src=img "img/logo.png" alt="imagem da logo">
+        <ul>
+          <li><a href="#">encontrar vaga</a></li>
+          <li><a href="#">enviar vaga</a></li>
+          <li><a href="#">contato</a></li>
+      </nav>
+    </div>
 
   </body>
 </html>
