código do html pronto no momento

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <li><a href="#">encontrar vaga</a></li>
           <li><a href="#">enviar vaga</a></li>
           <li><a href="#">contato</a></li>
+        </ul>
+      </div>
       </nav>
     </div>
 
