css  em andamento html pronto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <nav>
         <div class= "nav-container">
-        <img id= "logo" src=img "img/logo.png" alt="imagem da logo">
+        <img id= "logo" src="img/logo.png alt"="imagem da logo">
           <ul>
               <li><a href="#">encontrar vaga</a></li>
               <li><a href="#">enviar vaga</a></li>
@@ -28,7 +28,23 @@
           </ul>
        </div>
       </nav>
+      <div id="main-banner">
+        <div id ="search-form">
+          <h1> A maneira mais fácil de encontrar seu novo emprego</h1>
+          <p>Conect-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos</p>
+            <form>
+              <imput type= "text" name="job" plese holder= "Digite o cargo">
+              <select name ="region">
+                <option value = ""> Todos os estados</option>
+              </select>
+              <select name ="category">
+                <option value ="">Categoria</option>
+              </select>  
+              <imput type ="sublimit"value ="Pesquisar"
+            </form>
+        </div>
+      </div>
     </div>
-
+   
   </body>
 </html>
